--- a/components/header.html
+++ b/components/header.html
@@ -36,4 +36,47 @@
         </label>
         <ul tabindex="0" class="dropdown-content menu p-2 shadow-xl bg-base-100 rounded-box w-56 mt-3 border border-base-200">
           <li><a href="academie.html" class="hover:bg-primary/10 hover:text-primary">Programme</a></li>
+          <li><a href="infos-tarifs.html" class="hover:bg-primary/10 hover:text-primary">Infos & Tarifs</a></li>
+          <li><a href="faq.html" class="hover:bg-primary/10 hover:text-primary">FAQ</a></li>
+        </ul>
+      </li>
+
+      <li><a href="contact.html" class="hover:text-primary transition-colors font-medium">Contact</a></li>
+    </ul>
+  </div>
+
+  <div class="navbar-end">
+    <!-- Mobile menu button -->
+    <div class="dropdown dropdown-end lg:hidden">
+      <label tabindex="0" class="btn btn-ghost btn-circle">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" />
+        </svg>
+      </label>
+      <ul tabindex="0" class="menu menu-compact dropdown-content mt-3 p-2 shadow-xl bg-base-100 rounded-box w-64 border border-base-200">
+        <li><a href="index.html">Accueil</a></li>
+        <li class="menu-title">
+          <span>À propos</span>
+        </li>
+        <li><a href="a-propos.html" class="pl-8">Notre histoire</a></li>
+        <li><a href="concept.html" class="pl-8">Concept</a></li>
+        <li><a href="methodologie.html" class="pl-8">Méthodologie</a></li>
+        <li><a href="enjeux.html" class="pl-8">Enjeux</a></li>
+        <li><a href="educateurs.html" class="pl-8">Espace éducateurs</a></li>
+        <li class="menu-title">
+          <span>Académie</span>
+        </li>
+        <li><a href="academie.html" class="pl-8">Programme</a></li>
+        <li><a href="infos-tarifs.html" class="pl-8">Infos & Tarifs</a></li>
+        <li><a href="faq.html" class="pl-8">FAQ</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+    
+    <!-- CTA Button Desktop -->
+    <a href="contact.html" class="btn btn-primary btn-sm hidden lg:flex">
+      Inscription 2026
+    </a>
+  </div>
+</header>
           
