--- a/components/header.html
+++ b/components/header.html
@@ -1,3 +1,4 @@
+<a href="#main" class="skip-link">Aller au contenu principal</a>
 <header class="bg-base-200">
   <div class="navbar container mx-auto">
     <div class="navbar-start">
